--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -95,6 +95,11 @@
             </a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('admin_questionnaire') }}">
+              <i class="bi bi-clipboard-check"></i> Questionnaire
+            </a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="{{ url_for('admin_logout') }}">
               <i class="bi bi-box-arrow-right"></i> Logout
             </a>
